# 5G-NR-LDPC-CPP

./: CMakeLists.txt
Source files/: LDPC.cpp  LDPC.h  example_run.cpp
